Desarrollo nav bar

--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.7",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@npmcli/package-json": "^5.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "glob": "^9.3.5",
+    "inflight": "^1.0.6",
+    "lru-cache": "^10.3.0",
+    "read-package-json": "^7.0.1",
+    "rimraf": "^4.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
