--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@npmcli/package-json": "^5.2.0",
     "@popperjs/core": "^2.11.8",
+    "angular-feather": "^6.5.1",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "glob": "^9.3.5",
